# CPPANN

./: .gitignore  Anatomy.txt  CMakeLists.txt  Makefile
MNIST_Processing/: CMakeLists.txt  Makefile  MultiThreadTest.cpp  NetworkChecker.cpp  TestTrainer  TestTrainer.cpp
MNIST_Processing/MNISTTrialTwentyNine/: specs.txt
MNIST_Processing/MNISTTrialTwentyNine/Eight/: Network100.db  Network101.db  Network102.db  Network103.db  Network104.db  Network105.db  Network106.db  Network107.db  Network108.db  Network109.db  Network110.db  Network111.db  Network112.db  Network113.db  Network114.db  Network115.db  Network116.db  Network117.db  Network118.db  Network119.db  Network120.db  Network121.db  Network122.db  Network123.db  Network124.db  Network125.db  Network126.db  Network127.db  Network128.db  Network129.db  Network130.db  Network131.db  Network132.db  Network133.db  Network134.db  Network135.db  Network136.db  Network137.db  Network138.db  Network139.db  (+38 more)
MNIST_Processing/MNISTTrialTwentyNine/Eleven/: Network370.db  Network371.db  Network372.db  Network373.db  Network374.db  Network375.db  Network376.db  Network377.db  Network378.db  Network379.db  Network380.db  Network381.db  Network382.db  Network383.db  Network384.db
MNIST_Processing/MNISTTrialTwentyNine/Five/: Network0.db  Network1.db  Network10.db  Network100.db  Network101.db  Network102.db  Network103.db  Network104.db  Network105.db  Network106.db  Network107.db  Network108.db  Network109.db  Network11.db  Network110.db  Network111.db  Network112.db  Network113.db  Network114.db  Network115.db  Network116.db  Network117.db  Network118.db  Network119.db  Network12.db  Network120.db  Network121.db  Network122.db  Network123.db  Network124.db  Network125.db  Network126.db  Network127.db  Network128.db  Network129.db  Network13.db  Network130.db  Network131.db  Network132.db  Network133.db  (+657 more)
MNIST_Processing/MNISTTrialTwentyNine/Four/: Network0.db  Network1.db  Network10.db  Network2.db  Network3.db  Network4.db  Network5.db  Network6.db  Network7.db  Network8.db  Network9.db
MNIST_Processing/MNISTTrialTwentyNine/Fourteen/: Network7074.db  Network7075.db
MNIST_Processing/MNISTTrialTwentyNine/Nine/: Network152.db  Network153.db  Network154.db  Network155.db  Network156.db  Network157.db  Network158.db  Network159.db  Network160.db  Network161.db  Network162.db  Network163.db  Network164.db  Network165.db  Network166.db  Network167.db  Network168.db  Network169.db  Network170.db  Network171.db  Network172.db  Network173.db  Network174.db  Network175.db  Network176.db  Network177.db  Network178.db  Network179.db  Network180.db  Network181.db  Network182.db  Network183.db  Network184.db  Network185.db  Network186.db  Network187.db  Network188.db  Network189.db  Network190.db  Network191.db  (+14 more)
MNIST_Processing/MNISTTrialTwentyNine/One/: Network1.db  Network10.db  Network11.db  Network12.db  Network13.db  Network14.db  Network15.db  Network16.db  Network17.db  Network18.db  Network19.db  Network2.db  Network20.db  Network21.db  Network22.db  Network23.db  Network24.db  Network25.db  Network26.db  Network27.db  Network28.db  Network29.db  Network3.db  Network30.db  Network31.db  Network32.db  Network33.db  Network34.db  Network35.db  Network36.db  Network37.db  Network38.db  Network39.db  Network4.db  Network40.db  Network41.db  Network42.db  Network43.db  Network44.db  Network45.db  (+10 more)
MNIST_Processing/MNISTTrialTwentyNine/Seven/: Network0.db  Network1.db  Network10.db  Network11.db  Network12.db  Network13.db  Network14.db  Network15.db  Network16.db  Network17.db  Network18.db  Network19.db  Network2.db  Network20.db  Network21.db  Network22.db  Network23.db  Network24.db  Network25.db  Network26.db  Network27.db  Network28.db  Network29.db  Network3.db  Network30.db  Network31.db  Network32.db  Network33.db  Network34.db  Network35.db  Network36.db  Network37.db  Network38.db  Network39.db  Network4.db  Network40.db  Network41.db  Network42.db  Network43.db  Network44.db  (+34 more)
MNIST_Processing/MNISTTrialTwentyNine/Six/: Network0.db  Network1.db  Network10.db  Network11.db  Network12.db  Network13.db  Network14.db  Network15.db  Network16.db  Network17.db  Network18.db  Network19.db  Network2.db  Network20.db  Network21.db  Network22.db  Network23.db  Network24.db  Network25.db  Network26.db  Network27.db  Network28.db  Network29.db  Network3.db  Network30.db  Network31.db  Network32.db  Network33.db  Network34.db  Network35.db  Network36.db  Network37.db  Network38.db  Network39.db  Network4.db  Network40.db  Network5.db  Network6.db  Network7.db  Network8.db  (+1 more)
MNIST_Processing/MNISTTrialTwentyNine/Ten/: Network206.db  Network207.db  Network208.db  Network209.db  Network210.db  Network211.db  Network212.db  Network213.db  Network214.db  Network215.db  Network216.db  Network217.db  Network218.db  Network219.db  Network220.db  Network221.db  Network222.db  Network223.db  Network224.db  Network225.db  Network226.db  Network227.db  Network228.db  Network229.db  Network230.db  Network231.db  Network232.db  Network233.db  Network234.db  Network235.db  Network236.db  Network237.db  Network238.db  Network239.db  Network240.db  Network241.db  Network242.db  Network243.db  Network244.db  Network245.db  (+124 more)
MNIST_Processing/MNISTTrialTwentyNine/Thirteen/: Network449.db  Network450.db  Network451.db  Network452.db  Network453.db  Network454.db  Network455.db  (+6 more)
MNIST_Processing/support/: ImageHolder.hpp  MNISTTester.cpp  MNISTTester.hpp  MNISTTrainerV2.cpp  MNISTTrainerV2.hpp
(+325 files in other folders)
