cmake_minimum_required(VERSION 3.18.4)

project(CPPANN)

option(MAIN "Build driver (main.cpp)" ON)
option(TEST "Build basicTests (basicFunctionsTests.cpp)" ON)
option(BASIC_FUNCTION_TESTS "Build basicTests (basicFunctionsTests.cpp)" ON)
option(TRAINING_TESTS "Build trainingTests (trainingTests.cpp)" ON)

if(MAIN)
    add_executable(main src/main.cpp src/Layer.cpp src/Network.cpp src/Trainer.cpp)
endif()

if(TEST)
    add_subdirectory(googletest)
    include_directories(googletest/googletest/include src test)
    if(BASIC_FUNCTION_TESTS)
        add_executable(basicFunctionsTests test/basicFunctionsTests.cpp)
        target_link_libraries(basicFunctionsTests PRIVATE gtest)
    endif()
    if(TRAINING_TESTS)
        include_directories(googletest/googletest/include src)
        add_executable(trainingTests test/trainingTests.cpp src/Trainer.cpp)
        target_link_libraries(trainingTests PRIVATE gtest)
    endif()
endif()